--- a/thesis/gradu2.bib
+++ b/thesis/gradu2.bib
@@ -105,7 +105,7 @@
   publisher = {{Association for Computing Machinery}},
   address = {{New York, NY, USA}},
   doi = {10.1145/3399579.3399867},
-  urldate = {2023-10-25},
+  urldate = {2023-10-24},
   abstract = {MLflow is a popular open source platform for managing ML development, including experiment tracking, reproducibility, and deployment. In this paper, we discuss user feedback collected since MLflow was launched in 2018, as well as three major features we have introduced in response to this feedback: a Model Registry for collaborative model management and review, tools for simplifying ML code instrumentation, and experiment analytics functions for extracting insights from millions of ML experiments.},
   isbn = {978-1-4503-8023-2}
 }
@@ -141,20 +141,6 @@
   abstract = {In this issue, ``Best of the Web'' presents the modified National Institute of Standards and Technology (MNIST) resources, consisting of a collection of handwritten digit images used extensively in optical character recognition and machine learning research.},
   keywords = {Machine learning},
   file = {C\:\\Users\\master\\Zotero\\storage\\YD2EFMVK\\Deng_2012_The MNIST Database of Handwritten Digit Images for Machine Learning Research.pdf;C\:\\Users\\master\\Zotero\\storage\\8XXBPIR7\\6296535.html}
-}
-
-@misc{DevelopmentsMLflowProceedings,
-  title = {Developments in {{MLflow}} | {{Proceedings}} of the {{Fourth International Workshop}} on {{Data Management}} for {{End-to-End Machine Learning}}},
-  urldate = {2023-10-26},
-  howpublished = {https://dl.acm.org/doi/10.1145/3399579.3399867},
-  file = {C:\Users\master\Zotero\storage\GAHHF3L9\3399579.html}
-}
-
-@misc{DevelopmentsMLflowProceedingsa,
-  title = {Developments in {{MLflow}} | {{Proceedings}} of the {{Fourth International Workshop}} on {{Data Management}} for {{End-to-End Machine Learning}}},
-  urldate = {2023-10-26},
-  howpublished = {https://dl.acm.org/doi/10.1145/3399579.3399867},
-  file = {C:\Users\master\Zotero\storage\ABFJZMZD\3399579.html}
 }
 
 @misc{dodgeFineTuningPretrainedLanguage2020,
@@ -646,6 +632,23 @@
   file = {C\:\\Users\\master\\Zotero\\storage\\PF8PE5AX\\Myllyaho et al_2022_On misbehaviour and fault tolerance in machine learning systems.pdf;C\:\\Users\\master\\Zotero\\storage\\IRCSGYBT\\S016412122100193X.html}
 }
 
+@misc{neyshaburExploringGeneralizationDeep2017,
+  title = {Exploring {{Generalization}} in {{Deep Learning}}},
+  author = {Neyshabur, Behnam and Bhojanapalli, Srinadh and McAllester, David and Srebro, Nathan},
+  year = {2017},
+  month = jul,
+  number = {arXiv:1706.08947},
+  eprint = {1706.08947},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.1706.08947},
+  urldate = {2023-11-01},
+  abstract = {With a goal of understanding what drives generalization in deep networks, we consider several recently suggested explanations, including norm-based control, sharpness and robustness. We study how these measures can ensure generalization, highlighting the importance of scale normalization, and making a connection between sharpness and PAC-Bayes theory. We then investigate how well the measures explain different observed phenomena.},
+  archiveprefix = {arxiv},
+  keywords = {\_tablet,Computer Science - Machine Learning},
+  file = {C\:\\Users\\master\\Zotero\\storage\\HJDW7CET\\Neyshabur et al_2017_Exploring Generalization in Deep Learning.pdf;C\:\\Users\\master\\Zotero\\storage\\Z4A2F3R4\\1706.html}
+}
+
 @inproceedings{niculescu-mizilPredictingGoodProbabilities2005,
   title = {Predicting Good Probabilities with Supervised Learning},
   booktitle = {Proceedings of the 22nd International Conference on {{Machine}} Learning},
@@ -697,14 +700,14 @@
   shorttitle = {Scikit-Learn},
   author = {Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, {\'E}douard},
   year = {2011},
-  month = nov,
-  journal = {The Journal of Machine Learning Research},
+  journal = {Journal of Machine Learning Research},
   volume = {12},
-  number = {null},
+  number = {85},
   pages = {2825--2830},
-  issn = {1532-4435},
+  issn = {1533-7928},
+  urldate = {2023-10-25},
   abstract = {Scikit-learn is a Python module integrating a wide range of state-of-the-art machine learning algorithms for medium-scale supervised and unsupervised problems. This package focuses on bringing machine learning to non-specialists using a general-purpose high-level language. Emphasis is put on ease of use, performance, documentation, and API consistency. It has minimal dependencies and is distributed under the simplified BSD license, encouraging its use in both academic and commercial settings. Source code, binaries, and documentation can be downloaded from http://scikit-learn.sourceforge.net.},
-  file = {C:\Users\master\Zotero\storage\C6GND4H9\Pedregosa et al_2011_Scikit-learn.pdf}
+  file = {C:\Users\master\Zotero\storage\S77C2H4M\Pedregosa et al_2011_Scikit-learn.pdf}
 }
 
 @inproceedings{pereraImproveSoftwareQuality2017,
@@ -775,6 +778,17 @@
   file = {C\:\\Users\\master\\Zotero\\storage\\RBLAW9V5\\Rivolli et al_2019_Characterizing classification datasets.pdf;C\:\\Users\\master\\Zotero\\storage\\GZWP5W9J\\1808.html}
 }
 
+@misc{rodolaGiampaoloPsutil2023,
+  title = {Giampaolo/Psutil},
+  author = {Rodola, Giampaolo},
+  year = {2023},
+  month = nov,
+  urldate = {2023-11-02},
+  abstract = {Cross-platform lib for process and system monitoring in Python},
+  copyright = {BSD-3-Clause},
+  keywords = {cpu,disk,freebsd,linux,memory,monitoring,netbsd,openbsd,osx,ps,psutil,python,sensors,system-monitoring,top,windows}
+}
+
 @misc{rombachHighResolutionImageSynthesis2022,
   title = {High-{{Resolution Image Synthesis}} with {{Latent Diffusion Models}}},
   author = {Rombach, Robin and Blattmann, Andreas and Lorenz, Dominik and Esser, Patrick and Ommer, Bj{\"o}rn},
@@ -815,6 +829,7 @@
   issn = {1533-7928},
   urldate = {2023-09-28},
   abstract = {Recent hardware developments have dramatically increased the scale of data parallelism available for neural network training. Among the simplest ways to harness next-generation hardware is to increase the batch size in standard mini-batch neural network training algorithms. In this work, we aim to experimentally characterize the effects of increasing the batch size on training time, as measured by the number of steps necessary to reach a goal out-of-sample error. We study how this relationship varies with the training algorithm, model, and data set, and find extremely large variation between workloads. Along the way, we show that disagreements in the literature on how batch size affects model quality can largely be explained by differences in metaparameter tuning and compute budgets at different batch sizes. We find no evidence that larger batch sizes degrade out-of-sample performance. Finally, we discuss the implications of our results on efforts to train neural networks much faster in the future. Our experimental data is publicly available as a database of 71,638,836 loss measurements taken over the course of training for 168,160 individual models across 35 workloads.},
+  keywords = {\_tablet},
   file = {C:\Users\master\Zotero\storage\LZPDZCG8\Shallue et al_2019_Measuring the Effects of Data Parallelism on Neural Network Training.pdf}
 }
 
@@ -920,6 +935,15 @@
   copyright = {Copyright (c) 2020 Association for the Advancement of Artificial Intelligence},
   langid = {english},
   file = {C:\Users\master\Zotero\storage\GYKMMFTG\Strubell et al_2020_Energy and Policy Considerations for Modern Deep Learning Research.pdf}
+}
+
+@misc{therayteamMemoryManagementRay,
+  title = {Memory {{Management}} \textemdash{} {{Ray}} 2.7.1},
+  author = {{The Ray Team,}},
+  journal = {Ray},
+  urldate = {2023-11-01},
+  howpublished = {https://docs.ray.io/en/latest/ray-core/scheduling/memory-management.html},
+  file = {C:\Users\master\Zotero\storage\SM4ZQGAF\memory-management.html}
 }
 
 @misc{thompsonComputationalLimitsDeep2022,
