--- a/thesis/gradu2.bib
+++ b/thesis/gradu2.bib
@@ -93,6 +93,23 @@
   file = {C:\Users\master\Zotero\storage\H3RYTRQL\Chen_Ran_2019_Deep Learning With Edge Computing.pdf}
 }
 
+@inproceedings{chenDevelopmentsMLflowSystem2020,
+  title = {Developments in {{MLflow}}: {{A System}} to {{Accelerate}} the {{Machine Learning Lifecycle}}},
+  shorttitle = {Developments in {{MLflow}}},
+  booktitle = {Proceedings of the {{Fourth International Workshop}} on {{Data Management}} for {{End-to-End Machine Learning}}},
+  author = {Chen, Andrew and Chow, Andy and Davidson, Aaron and DCunha, Arjun and Ghodsi, Ali and Hong, Sue Ann and Konwinski, Andy and Mewald, Clemens and Murching, Siddharth and Nykodym, Tomas and Ogilvie, Paul and Parkhe, Mani and Singh, Avesh and Xie, Fen and Zaharia, Matei and Zang, Richard and Zheng, Juntai and Zumar, Corey},
+  year = {2020},
+  month = jun,
+  series = {{{DEEM}}'20},
+  pages = {1--4},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/3399579.3399867},
+  urldate = {2023-10-24},
+  abstract = {MLflow is a popular open source platform for managing ML development, including experiment tracking, reproducibility, and deployment. In this paper, we discuss user feedback collected since MLflow was launched in 2018, as well as three major features we have introduced in response to this feedback: a Model Registry for collaborative model management and review, tools for simplifying ML code instrumentation, and experiment analytics functions for extracting insights from millions of ML experiments.},
+  isbn = {978-1-4503-8023-2}
+}
+
 @misc{coteQualityIssuesMachine2022,
   title = {Quality Issues in {{Machine Learning Software Systems}}},
   author = {C{\^o}t{\'e}, Pierre-Olivier and Nikanjam, Amin and Bouchoucha, Rached and Khomh, Foutse},
@@ -108,6 +125,23 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Machine Learning,Computer Science - Software Engineering},
   file = {C\:\\Users\\master\\Zotero\\storage\\NPNEQEVA\\Côté et al_2022_Quality issues in Machine Learning Software Systems.pdf;C\:\\Users\\master\\Zotero\\storage\\ES8GKMEI\\2208.html}
+}
+
+@misc{dahlBenchmarkingNeuralNetwork2023,
+  title = {Benchmarking {{Neural Network Training Algorithms}}},
+  author = {Dahl, George E. and Schneider, Frank and Nado, Zachary and Agarwal, Naman and Sastry, Chandramouli Shama and Hennig, Philipp and Medapati, Sourabh and Eschenhagen, Runa and Kasimbeg, Priya and Suo, Daniel and Bae, Juhan and Gilmer, Justin and Peirson, Abel L. and Khan, Bilal and Anil, Rohan and Rabbat, Mike and Krishnan, Shankar and Snider, Daniel and Amid, Ehsan and Chen, Kongtao and Maddison, Chris J. and Vasudev, Rakshith and Badura, Michal and Garg, Ankush and Mattson, Peter},
+  year = {2023},
+  month = jun,
+  number = {arXiv:2306.07179},
+  eprint = {2306.07179},
+  primaryclass = {cs, stat},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.2306.07179},
+  urldate = {2023-11-05},
+  abstract = {Training algorithms, broadly construed, are an essential part of every deep learning pipeline. Training algorithm improvements that speed up training across a wide variety of workloads (e.g., better update rules, tuning protocols, learning rate schedules, or data selection schemes) could save time, save computational resources, and lead to better, more accurate, models. Unfortunately, as a community, we are currently unable to reliably identify training algorithm improvements, or even determine the state-of-the-art training algorithm. In this work, using concrete experiments, we argue that real progress in speeding up training requires new benchmarks that resolve three basic challenges faced by empirical comparisons of training algorithms: (1) how to decide when training is complete and precisely measure training time, (2) how to handle the sensitivity of measurements to exact workload details, and (3) how to fairly compare algorithms that require hyperparameter tuning. In order to address these challenges, we introduce a new, competitive, time-to-result benchmark using multiple workloads running on fixed hardware, the AlgoPerf: Training Algorithms benchmark. Our benchmark includes a set of workload variants that make it possible to detect benchmark submissions that are more robust to workload changes than current widely-used methods. Finally, we evaluate baseline submissions constructed using various optimizers that represent current practice, as well as other optimizers that have recently received attention in the literature. These baseline results collectively demonstrate the feasibility of our benchmark, show that non-trivial gaps between methods exist, and set a provisional state-of-the-art for future benchmark submissions to try and surpass.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {C\:\\Users\\master\\Zotero\\storage\\VJRJBDX4\\Dahl et al_2023_Benchmarking Neural Network Training Algorithms.pdf;C\:\\Users\\master\\Zotero\\storage\\CZ6H62F7\\2306.html}
 }
 
 @article{dengMNISTDatabaseHandwritten2012,
@@ -404,6 +438,22 @@
   file = {C:\Users\master\Zotero\storage\Z4NV27YU\LeCun et al_2015_Deep learning.pdf}
 }
 
+@article{lecunGradientbasedLearningApplied1998,
+  title = {Gradient-Based Learning Applied to Document Recognition},
+  author = {Lecun, Y. and Bottou, L. and Bengio, Y. and Haffner, P.},
+  year = {1998},
+  month = nov,
+  journal = {Proceedings of the IEEE},
+  volume = {86},
+  number = {11},
+  pages = {2278--2324},
+  issn = {1558-2256},
+  doi = {10.1109/5.726791},
+  urldate = {2023-11-06},
+  abstract = {Multilayer neural networks trained with the back-propagation algorithm constitute the best example of a successful gradient based learning technique. Given an appropriate network architecture, gradient-based learning algorithms can be used to synthesize a complex decision surface that can classify high-dimensional patterns, such as handwritten characters, with minimal preprocessing. This paper reviews various methods applied to handwritten character recognition and compares them on a standard handwritten digit recognition task. Convolutional neural networks, which are specifically designed to deal with the variability of 2D shapes, are shown to outperform all other techniques. Real-life document recognition systems are composed of multiple modules including field extraction, segmentation recognition, and language modeling. A new learning paradigm, called graph transformer networks (GTN), allows such multimodule systems to be trained globally using gradient-based methods so as to minimize an overall performance measure. Two systems for online handwriting recognition are described. Experiments demonstrate the advantage of global training, and the flexibility of graph transformer networks. A graph transformer network for reading a bank cheque is also described. It uses convolutional neural network character recognizers combined with global training techniques to provide record accuracy on business and personal cheques. It is deployed commercially and reads several million cheques per day.},
+  file = {C:\Users\master\Zotero\storage\VPXBQSVP\Lecun et al_1998_Gradient-based learning applied to document recognition.pdf}
+}
+
 @misc{liawTuneResearchPlatform2018,
   title = {Tune: {{A Research Platform}} for {{Distributed Model Selection}} and {{Training}}},
   shorttitle = {Tune},
@@ -615,6 +665,23 @@
   file = {C\:\\Users\\master\\Zotero\\storage\\PF8PE5AX\\Myllyaho et al_2022_On misbehaviour and fault tolerance in machine learning systems.pdf;C\:\\Users\\master\\Zotero\\storage\\IRCSGYBT\\S016412122100193X.html}
 }
 
+@misc{neyshaburExploringGeneralizationDeep2017,
+  title = {Exploring {{Generalization}} in {{Deep Learning}}},
+  author = {Neyshabur, Behnam and Bhojanapalli, Srinadh and McAllester, David and Srebro, Nathan},
+  year = {2017},
+  month = jul,
+  number = {arXiv:1706.08947},
+  eprint = {1706.08947},
+  primaryclass = {cs},
+  publisher = {{arXiv}},
+  doi = {10.48550/arXiv.1706.08947},
+  urldate = {2023-11-01},
+  abstract = {With a goal of understanding what drives generalization in deep networks, we consider several recently suggested explanations, including norm-based control, sharpness and robustness. We study how these measures can ensure generalization, highlighting the importance of scale normalization, and making a connection between sharpness and PAC-Bayes theory. We then investigate how well the measures explain different observed phenomena.},
+  archiveprefix = {arxiv},
+  keywords = {\_tablet,Computer Science - Machine Learning},
+  file = {C\:\\Users\\master\\Zotero\\storage\\HJDW7CET\\Neyshabur et al_2017_Exploring Generalization in Deep Learning.pdf;C\:\\Users\\master\\Zotero\\storage\\Z4A2F3R4\\1706.html}
+}
+
 @inproceedings{niculescu-mizilPredictingGoodProbabilities2005,
   title = {Predicting Good Probabilities with Supervised Learning},
   booktitle = {Proceedings of the 22nd International Conference on {{Machine}} Learning},
@@ -659,6 +726,21 @@
   howpublished = {https://openai.com/blog/chatgpt},
   langid = {american},
   file = {C:\Users\master\Zotero\storage\6X4N5BY7\chatgpt.html}
+}
+
+@article{pedregosaScikitlearnMachineLearning2011,
+  title = {Scikit-Learn: {{Machine Learning}} in {{Python}}},
+  shorttitle = {Scikit-Learn},
+  author = {Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, {\'E}douard},
+  year = {2011},
+  journal = {Journal of Machine Learning Research},
+  volume = {12},
+  number = {85},
+  pages = {2825--2830},
+  issn = {1533-7928},
+  urldate = {2023-10-25},
+  abstract = {Scikit-learn is a Python module integrating a wide range of state-of-the-art machine learning algorithms for medium-scale supervised and unsupervised problems. This package focuses on bringing machine learning to non-specialists using a general-purpose high-level language. Emphasis is put on ease of use, performance, documentation, and API consistency. It has minimal dependencies and is distributed under the simplified BSD license, encouraging its use in both academic and commercial settings. Source code, binaries, and documentation can be downloaded from http://scikit-learn.sourceforge.net.},
+  file = {C:\Users\master\Zotero\storage\S77C2H4M\Pedregosa et al_2011_Scikit-learn.pdf}
 }
 
 @inproceedings{pereraImproveSoftwareQuality2017,
@@ -727,6 +809,17 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
   file = {C\:\\Users\\master\\Zotero\\storage\\RBLAW9V5\\Rivolli et al_2019_Characterizing classification datasets.pdf;C\:\\Users\\master\\Zotero\\storage\\GZWP5W9J\\1808.html}
+}
+
+@misc{rodolaGiampaoloPsutil2023,
+  title = {Giampaolo/Psutil},
+  author = {Rodola, Giampaolo},
+  year = {2023},
+  month = nov,
+  urldate = {2023-11-02},
+  abstract = {Cross-platform lib for process and system monitoring in Python},
+  copyright = {BSD-3-Clause},
+  keywords = {cpu,disk,freebsd,linux,memory,monitoring,netbsd,openbsd,osx,ps,psutil,python,sensors,system-monitoring,top,windows}
 }
 
 @misc{rombachHighResolutionImageSynthesis2022,
@@ -874,6 +967,15 @@
   copyright = {Copyright (c) 2020 Association for the Advancement of Artificial Intelligence},
   langid = {english},
   file = {C:\Users\master\Zotero\storage\GYKMMFTG\Strubell et al_2020_Energy and Policy Considerations for Modern Deep Learning Research.pdf}
+}
+
+@misc{therayteamMemoryManagementRay,
+  title = {Memory {{Management}} \textemdash{} {{Ray}} 2.7.1},
+  author = {{The Ray Team,}},
+  journal = {Ray},
+  urldate = {2023-11-01},
+  howpublished = {https://docs.ray.io/en/latest/ray-core/scheduling/memory-management.html},
+  file = {C:\Users\master\Zotero\storage\SM4ZQGAF\memory-management.html}
 }
 
 @misc{thompsonComputationalLimitsDeep2022,
