--- a/thesis/gradu2.bib
+++ b/thesis/gradu2.bib
@@ -27,6 +27,19 @@
   file = {C\:\\Users\\master\\Zotero\\storage\\I93LMDHA\\Baker et al_2017_Accelerating Neural Architecture Search using Performance Prediction.pdf;C\:\\Users\\master\\Zotero\\storage\\IWHABXLB\\1705.html}
 }
 
+@misc{bischlOpenMLBenchmarkingSuites2017,
+  title = {{{OpenML Benchmarking Suites}}},
+  author = {Bischl, Bernd and Casalicchio, Giuseppe and Feurer, Matthias and Gijsbers, Pieter and Hutter, Frank and Lang, Michel and Mantovani, Rafael G. and {van Rijn}, Jan N. and Vanschoren, Joaquin},
+  year = {2017},
+  month = aug,
+  journal = {arXiv.org},
+  urldate = {2023-11-16},
+  abstract = {Machine learning research depends on objectively interpretable, comparable, and reproducible algorithm benchmarks. We advocate the use of curated, comprehensive suites of machine learning tasks to standardize the setup, execution, and reporting of benchmarks. We enable this through software tools that help to create and leverage these benchmarking suites. These are seamlessly integrated into the OpenML platform, and accessible through interfaces in Python, Java, and R. OpenML benchmarking suites (a) are easy to use through standardized data formats, APIs, and client libraries; (b) come with extensive meta-information on the included datasets; and (c) allow benchmarks to be shared and reused in future studies. We then present a first, carefully curated and practical benchmarking suite for classification: the OpenML Curated Classification benchmarking suite 2018 (OpenML-CC18). Finally, we discuss use cases and applications which demonstrate the usefulness of OpenML benchmarking suites and the OpenML-CC18 in particular.},
+  howpublished = {https://arxiv.org/abs/1708.03731v3},
+  langid = {english},
+  file = {C:\Users\master\Zotero\storage\4E8HAC3Q\Bischl et al_2017_OpenML Benchmarking Suites.pdf}
+}
+
 @inproceedings{breckMLTestScore2017a,
   title = {The {{ML Test Score}}: {{A Rubric}} for {{ML Production Readiness}} and {{Technical Debt Reduction}}},
   shorttitle = {The {{ML Test Score}}},
@@ -247,6 +260,17 @@
   abstract = {The need for people fluent in working with data is growing rapidly and enormously, but U.S. K\textendash 12 education does not provide meaningful learning experiences designed to develop understanding of data science concepts or a fluency with data science skills. Data science is inherently inter-disciplinary, so it makes sense to integrate it with existing content areas, but difficulties abound. Consideration of the work involved in doing data science and the habits of mind that lie behind it leads to a way of thinking about integrating data science with mathematics and science. Examples drawn from current activity development in the Data Games project shed some light on what technology-based, data-driven might be like. The project's ongoing research on learners' conceptions of organizing data and the relevance to data science education is explained.},
   langid = {english},
   file = {C:\Users\master\Zotero\storage\YWX2L6LE\Finzer_2013_The Data Science Education Dilemma.pdf}
+}
+
+@inproceedings{fischerOpenMLCTR23CuratedTabular2023,
+  title = {{{OpenML-CTR23}} \textendash{} {{A}} Curated Tabular Regression Benchmarking Suite},
+  booktitle = {{{AutoML Conference}} 2023 ({{Workshop}})},
+  author = {Fischer, Sebastian Felix and Feurer, Matthias and Bischl, Bernd},
+  year = {2023},
+  month = aug,
+  urldate = {2023-11-16},
+  langid = {english},
+  file = {C:\Users\master\Zotero\storage\5R69T4T2\Fischer et al_2023_OpenML-CTR23 – A curated tabular regression benchmarking suite.pdf}
 }
 
 @article{formanApplestoApplesCrossValidationStudies,
@@ -1028,6 +1052,23 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Computation and Language},
   file = {C\:\\Users\\master\\Zotero\\storage\\7QL95LTK\\Touvron et al_2023_LLaMA.pdf;C\:\\Users\\master\\Zotero\\storage\\BUKAMHIP\\2302.html}
+}
+
+@article{vanschorenOpenMLNetworkedScience2014,
+  title = {{{OpenML}}: Networked Science in Machine Learning},
+  shorttitle = {{{OpenML}}},
+  author = {Vanschoren, Joaquin and {van Rijn}, Jan N. and Bischl, Bernd and Torgo, Luis},
+  year = {2014},
+  month = jun,
+  journal = {ACM SIGKDD Explorations Newsletter},
+  volume = {15},
+  number = {2},
+  pages = {49--60},
+  issn = {1931-0145},
+  doi = {10.1145/2641190.2641198},
+  urldate = {2023-11-16},
+  abstract = {Many sciences have made significant breakthroughs by adopting online tools that help organize, structure and mine information that is too detailed to be printed in journals. In this paper, we introduce OpenML, a place for machine learning researchers to share and organize data in fine detail, so that they can work more effectively, be more visible, and collaborate with others to tackle harder problems. We discuss how OpenML relates to other examples of networked science and what benefits it brings for machine learning research, individual scientists, as well as students and practitioners.},
+  file = {C:\Users\master\Zotero\storage\VTRPUCCX\Vanschoren et al_2014_OpenML.pdf}
 }
 
 @article{wallerIncludingPerformanceBenchmarks2015,
